# master-parser-lab-session1

./: CMakeLists.txt  EvaluationVisitor.cpp  EvaluationVisitor.h  Expression.g4  LICENSE.txt  README.md  config.hpp.in  main.cpp
.github/workflows/: cmake-multi-platform.yml
